gaps are replaced with margins & slider bug fix

--- a/css/styles.less
+++ b/css/styles.less
@@ -110,12 +110,16 @@ a {
     
         .nav-list {
             display: flex;
-            gap: 30px;
             margin-left: 50px;
 
             li {
                 display: flex;
                 align-items: center;
+                margin-right: 30px;
+
+                &:nth-child(5) {
+                    margin-right: 0;
+                }
 
                 &.visible-mobile {
                     display: none;
@@ -186,7 +190,6 @@ a {
             
             .nav-list {
                 flex-direction: column;
-                gap: 20px;
                 position: fixed;
                 top: 80px;
                 right: -350px;
@@ -197,6 +200,15 @@ a {
                 padding: 30px 0 30px 40px;
                 background-color: darken(@grey-dark, 3%);
                 transition: 0.3s ease right;
+
+                li {
+                    margin-right: 0;
+                    margin-bottom: 20px;
+
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+                }
 
                 &.active {
                     right: 0;
@@ -240,7 +252,6 @@ a {
 .welcome-card {
     display: flex;
     flex-direction: column;
-    gap: 30px;
     justify-content: center;
     align-items: center;
     width: 900px;
@@ -254,6 +265,7 @@ a {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 30px;
 
         img {
             width: 150px;
@@ -277,6 +289,7 @@ a {
     .slogan {
         font-size: 36px;
         text-align: center;
+        margin-bottom: 30px;
     }
 
     .btn-action {
@@ -333,7 +346,6 @@ h2 {
 
 #about-us {
     img {
-        // height: 600px;
         width: 100%;
     }
 
@@ -341,13 +353,19 @@ h2 {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        gap: 25px;
+        // gap: 25px;
 
         * {
             font-size: 18px;
         }
         
         p {
+            margin-bottom: 25px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
             span {
                 font-weight: 600;
             }
@@ -358,7 +376,10 @@ h2 {
                 font-size: 16px;
             };
 
-            gap: 15px;
+            p {
+                margin-bottom: 15px;
+            }
+
             margin-top: 20px;
         }
     }
@@ -411,7 +432,7 @@ h2 {
 
 .slider {
     position: relative;
-    visibility: hidden;
+    display: none;
 
     .slider-slides {
         height: 450px;
@@ -499,7 +520,7 @@ h2 {
     }
 
     @media(max-width: 575px) {
-        visibility: visible;
+        display: block;
     }
 }
 
